--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint:all": "eslint --ext .tsx src",
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
