--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
+    "prepare": "husky install",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint:all": "eslint --ext .tsx src",
-    "test": "echo \"Error: no test specified\"",
-    "prepare": "husky install"
+    "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
     "react": "^18.0.0",
