--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -7,11 +7,7 @@ jobs:
       matrix:
         node-version: [16]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 7.0.0
@@ -24,9 +20,4 @@ jobs:
         run: pnpm install
       - name: Lint
         run: pnpm lint:all
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
