--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
     "danger": "^11.0.5",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -33,7 +34,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "sass": "^1.51.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   },
