--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,6 @@ jobs:
           name: 'Install pnpm'
           command: |
             curl -fsSL https://get.pnpm.io/install.sh | sh -
-            export PATH=/home/circleci/.local/share/pnpm/:$PATH
       - run:
           name: Check current version of pnpm
           command: |
@@ -29,10 +28,14 @@ jobs:
           command: 'echo Hello, World!'
       - run:
           name: 'install deps'
-          command: 'pnpm install'
+          command: |
+            export PATH=/home/circleci/.local/share/pnpm/:$PATH
+            pnpm install
       - run:
           name: 'Danger'
-          command: 'pnpm exec danger ci'
+          command: |
+            export PATH=/home/circleci/.local/share/pnpm/:$PATH
+            pnpm exec danger ci
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
