--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
+      - name: 'get changed files'
+        run: |
+          echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})"
       - name: Install dependencies
         run: pnpm install
       - name: Lint
